<resources>

    <!--
    Copyright 2015 Chris Mustola
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.
    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
    You should have received a copy of the GNU General Public License
    along with this program.  If not, see http://www.gnu.org/licenses/.
-->

    <string name="app_name">Ski Judging Steno</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mainmenuskijudgingbuttontext">Ski Judging</string>
    <string name="mainmenusnowboardjudgingbutton">Snowboard Judging</string>
    <string name="mainmenuappsettingsbuttontext">Settings</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="skijudgingtutorialintroductiontext">Welcome to the Ski Judging Steno app!\nHere you can see how the app works, and what you can do with it!</string>
    <string name="title_activity_ski_judging">Ski Judging</string>
    <string name="title_activity_ski_slopestyle_event">Ski Slopestyle Event</string>
    <string name="skijudgingselecteventtext">Select an event below</string>
    <string name="skijudgingslopestylebuttontext">Slopestyle</string>
    <string name="skijudginghalfpipebuttontext">Half Pipe</string>
    <string name="amountofjudgedeventstext">Amount of judged events:</string>
    <string name="title_activity_add_event">AddEvent</string>
    <string name="creating_first_event_and_profile_text">Now you will create your first event. Since this is the first time, you will also create a profile that you can use later to make creating similar events faster and easier. You can give an event any name, and then fill in other details, and when you are done, press the save button at the bottom.\n</string>
    <string name="createnewprofilebutton">Create a new Profile</string>
    <string name="neweventbuttontext">Add new event</string>
    <string name="addingProfileText">Please fill in all of the details below</string>
    <string name="enterprofilenamehint">Enter a profile name</string>
    <string name="saveprofilebuttontext">Save Profile</string>
	<string name="addnewprofileselecteventtypetext">Select an event type below:</string>
	<string name="slopestyle_event">Slopestyle</string>
	<string name="half_pipe_event">Half Pipe</string>
	<string name="profile_saved_text">Profile Saved</string>
	<string name="invalid_profile_name">You can\'t use this as a profile name! Try something else!</string>
	<string name="new_profile_slopestyle_only">You can\'t Select anything else but Slopestyle right now, since you are creating this profile for a Slopestyle event. You can add a profile for Half Pipe later.</string>
	<string name="new_event_text">Please fill in all of the details below.\nYou can use a profile that you have already created. When you are done, press the Save button at the bottom.</string>
	<string name="load_existing_profile_button_text">Use an existing profile</string>
	<string name="addNewEventEditText">Enter event name</string>
	<string name="addNewProfileCompetitorsUse">What will the competitors be using?</string>
	<string name="competitorsUseSkis">Skis</string>
	<string name="competitorsUseSnowboards">Snowboards</string>
	<string name="competitorsUseBoth">Both</string>
    <string name="new_profile_skis_only">You can\'t Select anything else but Skis right now, since you are creating this profile for a Skiing event. You can add a profile for Snowboards and other later.</string>
    <string name="add_new_event_select_event_type_text">Select an event type below:</string>
    <string name="save_event_button_text">Save Event</string>
    <string name="new_event_slopestyle_only">You can\'t Select anything else but Slopestyle right now, since you are creating a Slopestyle Event. You can add an event for Half Pipe later.</string>
    <string name="new_event_skis_only">You can\'t Select anything else but Skis right now, since you are creating a Skiing event. You can add a an event for Snowboards and other later.</string>
    <string name="enter_event_location_optional">Enter event location(Optional):</string>
    <string name="enter_event_location">Enter event location:</string>
    <string name="event_saved_text">Event Saved</string>
    <string name="invalid_event_name">You can\'t use this as an event name! Try something else!</string>
    <string name="select_existing_event_text">Select an existing event below:</string>
    <string name="create_new_event_text">Create new event</string>
    <string name="dont_use_existing_profile_text">Don\'t use an existing profile</string>
    <string name="creating_first_event_text">Now you will create your first event.You can give an event any name, and then fill in other details, and when you are done, press the save button at the bottom.\n</string>
	<string name="dont_use_existing_profile_dialog_question">Are you sure that you don\'t want to use an existing profile?\nSelecting Don\'t use, will clear all of the details to their default state.</string>
	<string name="dont_use_existing_profile_dialog_confirm_text">Don\'t use</string>
	<string name="dont_use_existing_profile_dialog_cancel_text">Cancel</string>
    <string name="title_activity_settings">Settings</string>
    <string name="profile_settings_button_text">Profile Settings</string>
    <string name="settings_add_new_profile_button_text">Add a new profile</string>
    <string name="settings_modify_existing_profiles_button_text">Modify existing profiles</string>
    <string name="settings_delete_profiles_button_text">Delete profiles</string>
    <string name="delete_profile_instruction_text">Select the profile below that you want to delete, and then press the \"Delete Selected Profile\" button below</string>
    <string name="profile_details_text">PROFILE DETAILS:</string>
    <string name="event_type_text">Event type:</string>
    <string name="competitors_use_text">Competitors use:</string>
    <string name="event_location_text">Event location:</string>
    <string name="delete_profile_confirmation_button">Delete Selected Profile</string>
	<string name="delete_profile_warning_part1">Are you sure you want to delete this profile? All details regarding"</string>
	<string name="delete_profile_warning_part2">will be lost!</string>
	<string name="dialog_cancel_text">Cancel</string>
	<string name="delete_profile_dialog_confirm_text">Delete Profile</string>
	<string name="profile_deleted_message">Profile Deleted.</string>
	<string name="no_profiles_found_text">No Profiles Found!</string>
    <string name="reset_app_warning_text">Are you sure you want to reset the app? Doing this will delete all of the app data(Profiles, Events etc.) and it will not be recoverable!</string>
    <string name="reset_app_dialog_confirm_text">Reset App</string>
    <string name="reset_app_complete">App data resetting completed.</string>
	<string name="profile_amount_text">Amount of profiles:</string>
    <string name="select_an_item_text">Select an item</string>
</resources>
