<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2015 Chris Mustola
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.
    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
    You should have received a copy of the GNU General Public License
    along with this program.  If not, see http://www.gnu.org/licenses/.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_profile_instruction_text"
        android:id="@+id/deleteProfileInstructionTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/deleteProfileProfileSelectionListSpinner"
        android:layout_below="@+id/deleteProfileInstructionTextView"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_details_text"
        android:layout_below="@+id/deleteProfileProfileSelectionListSpinner"
        android:id="@+id/deleteProfileProfileDetailsTextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_type_text"
        android:layout_below="@+id/deleteProfileProfileDetailsTextView"
        android:id="@+id/deleteProfileEventTypeTextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/competitors_use_text"
        android:layout_below="@+id/deleteProfileEventTypeTextView"
        android:id="@+id/deleteProfileWhatCompetitorsUseTextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_location_text"
        android:layout_below="@+id/deleteProfileWhatCompetitorsUseTextView"
        android:id="@+id/deleteProfileEventLocationTextView"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_profile_confirmation_button"
        android:layout_below="@+id/deleteProfileEventLocationTextView"
        android:id="@+id/deleteProfileConfirmationButton"/>

</RelativeLayout>