<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2015 Chris Mustola
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.
    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
    You should have received a copy of the GNU General Public License
    along with this program.  If not, see http://www.gnu.org/licenses/.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_event_text"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:id="@+id/newEventAddInfoTextView"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addEventLoadExistingProfileButton"
        android:text="@string/load_existing_profile_button_text"
        android:layout_below="@+id/newEventAddInfoTextView"/>

    <Spinner
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/addEventLoadExistingProfileButton"
        android:id="@+id/addNewEventLoadExistingProfileSelectionSpinner"
        android:visibility="gone"/>

    <EditText
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_width="match_parent"
        android:layout_below="@id/addNewEventLoadExistingProfileSelectionSpinner"
        android:id="@+id/addEventNewEventNameEditText"
        android:singleLine="true"
        android:hint="@string/addNewEventEditText"/>

    <TextView
        android:layout_height="wrap_content"
        android:text="@string/add_new_event_select_event_type_text"
        android:layout_width="wrap_content"
        android:layout_below="@id/addEventNewEventNameEditText"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:id="@+id/addNewEventSelectEventTypeTextView"/>

    <Spinner
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/addNewEventSelectEventTypeTextView"
        android:id="@+id/addNewEventSelectEventTypeSpinner"/>

    <TextView
        android:layout_height="wrap_content"
        android:text="@string/addNewProfileCompetitorsUse"
        android:layout_width="wrap_content"
        android:layout_below="@id/addNewEventSelectEventTypeSpinner"
        android:id="@+id/addNewEventSkiOrSnowboardText"
        android:layout_centerHorizontal="true"/>

    <Spinner
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/addNewEventSkiOrSnowboardText"
        android:id="@+id/addNewEventSelectWhatCompetitorsUseSpinner"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eventEventLocationEditText"
        android:layout_below="@+id/addNewEventSelectWhatCompetitorsUseSpinner"
        android:hint="@string/enter_event_location"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_event_button_text"
        android:id="@+id/saveEventButton"
        android:layout_below="@+id/eventEventLocationEditText"/>

</RelativeLayout>