<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <Button
        android:id="@+id/settingsAddProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/settings_add_new_profile_button_text"/>

    <Button
        android:id="@+id/settingsModifyExistingProfilesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settingsAddProfileButton"
        android:text="@string/settings_modify_existing_profiles_button_text"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settingsModifyExistingProfilesButton"
        android:id="@+id/settingsDeleteProfilesButton"
        android:text="@string/settings_delete_profiles_button_text"/>

</RelativeLayout>
